2006-10-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h: Make a first stab of an implementation for the AVR
	Dragon.  This is mostly the same as the JTAG ICE mkII, except it
	can only talk USB and has a different USB product ID.
	Documentation not yet done.
	* src/jtag2.h: (Ditto.)
	* src/jtag2io.cc: (Ditto.)
	* src/jtag2usb.cc: (Ditto.)
	* src/jtaggeneric.cc: (Ditto.)
	* src/main.cc: (Ditto.)

2006-10-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: bump version to post-2.5
	* NEWS: add boilerplate for next r

2006-10-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: bump version to 2.5

2006-10-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2io.cc: Don't mess with the fuse or lock bits in
	debugWire mode.
	* src/main.cc: Add --erase to the example usage.
	* NEWS: (New file.)
	* Makefile.am (EXTRA_DIST): Add NEWS.

2006-09-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Implement basic soft BP support for debugWire:
	* src/jtag2.h: add a soft BP cache, and updateBreakpintsDW().
	* src/jtag2bp.cc: Implement updateBreakpintsDW().

2006-09-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tools/devdescr.xsl: (New file.) Generate devdescr.cc
	entry out of the XML file.
	* src/devdescr.cc: Add entries for all debugWire AVRs,
	generated with devdescr.xsl.

2006-09-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtaggeneric.cc: Initialize is_usb properly when
	creating a new "jtag" object.

2006-09-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/avarice.1: Mention that avrdude can turn off the
	DWEN fuse.

2006-08-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	First part of implementing debugWire support.
	* src/main.cc: Implement the debugWire framework.
	* src/jtag.h: (Ditto.)
	* src/jtag2.h: (Ditto.)
	* src/jtag2io.cc: (Ditto.)
	* src/jtag2prog.cc: (Ditto.)
	* src/jtag2rw.cc: (Ditto.)
	* src/devdescr.cc: Add an entry for the ATmega48.
	* doc/avarice.1: Document the debugWire effort.
	* configure.ac: Bump version.
